# MLB-player-props-predictor

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: dataset_health.py  db.py  domain.py  features.py  grading.py  main.py  normalization.py  performance.py  pipeline.py  player_game_batting.py  player_stats.py  propline_client.py  propline_models.py  repositories.py  schemas.py  scoring.py  settings.py
backend/jobs/: __init__.py  backfill_player_game_batting.py  backtest_batter_hits_baselines.py  build_batter_hits_training_examples.py  generate_board.py  grade_board.py  ingest_props.py
backend/ml/: __init__.py  backtest.py  baselines.py  data.py  metrics.py
backend/tests/: fixtures.py  test_batter_hits_baseline_backtest_job.py  test_batter_hits_training_examples_job.py  test_board_generation.py  test_daily_board_job_endpoint.py  test_dataset_health.py  test_features.py  test_grading.py  test_health.py  test_latest_board.py  test_ml_backtest.py  test_ml_baselines.py  test_ml_metrics.py  test_normalization.py  test_performance.py  test_player_game_batting.py  test_player_stats.py  test_propline_client.py  test_repositories.py  test_scoring.py
database/: schema.sql  seed.sql
database/migrations/: 001_prop_ingestion_pipeline.sql  002_board_grading.sql  003_player_game_batting.sql  004_batter_hits_training_examples.sql
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ApiStatus.tsx  DailyBoard.tsx  PerformanceSummary.tsx  RecentResults.tsx
frontend/src/types/: board.ts  performance.ts
