[project]
name = "mlb-player-props-backend"
version = "0.1.0"
description = "FastAPI backend for the MLB player props walking skeleton."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "python-dotenv>=1",
    "supabase>=2",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*", "jobs*"]

[tool.ruff]
line-length = 79

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = false
